[gd_scene load_steps=3 format=3 uid="uid://b4ptsysoq7mgm"]

[ext_resource type="Script" path="res://nodes/comment_node/comment_node.gd" id="3_vd25i"]

[sub_resource type="Theme" id="Theme_llmqa"]

[node name="CommentNode" type="GraphNode" groups=["graph_nodes"]]
custom_minimum_size = Vector2(400, 100)
offset_right = 400.0
offset_bottom = 100.0
theme = SubResource("Theme_llmqa")
title = "NodeComment"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("3_vd25i")
titlebar_color = Color(1, 1, 1, 1)

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="CommentEdit" type="TextEdit" parent="MainContainer"]
layout_mode = 2
wrap_mode = 1
scroll_fit_content_height = true

[connection signal="resize_request" from="." to="." method="_on_GraphNode_resize_request"]
